templates/sm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sm-service
                port:
                  number: 5050
