templates/smc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: smc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smc-service
                port:
                  number: 5051
